--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <licenses>
         <license>
-            <name>Lesser General Public License, Version 3.0</name>
+            <name>GNU Lesser General Public License, Version 3.0</name>
             <url>http://www.gnu.org/licenses/lgpl.html</url>
             <distribution>repo</distribution>
         </license>
