Lots of changes. Adding digraph implementations and other interfaces that are required. It was hard to break this commit up as it really required a lot of playing to get things right. Unit tests/documentation is still required.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,19 @@
     <name>centres-core</name>
     <url>http://www.github.com/johnmay/centres</url>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openscience.cdk</groupId>
+            <artifactId>cdk-interfaces</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
