--- a/priority/pom.xml
+++ b/priority/pom.xml
@@ -48,7 +48,26 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <!-- Testing -->
         <dependency>
+            <groupId>org.openscience.cdk</groupId>
+            <artifactId>cdk-interfaces</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openscience.cdk</groupId>
+            <artifactId>cdk-io</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openscience.cdk</groupId>
+            <artifactId>cdk-silent</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
+          <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.1</version>
