--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <name>centres-core</name>
-    <url>http://www.github.com/johnmay/centres</url>
+    <url>http://www.github.com/johnmay/centres/core</url>
 
     <dependencies>
         <dependency>
