--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,6 +48,11 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.mdk</groupId>
+            <artifactId>mdk-apps-service</artifactId>
+            <version>1.3.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
