--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>core</module>
         <module>priority</module>
+        <module>api</module>
     </modules>
 
     <name>centres</name>
