New version of CDK and use in core (useful for debugging)

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>guava</artifactId>
             <version>13.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openscience.cdk</groupId>
+            <artifactId>cdk-silent</artifactId>
+            <version>1.5.3</version>
+        </dependency>
 
 
         <!-- Testing -->
