--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 
     <modules>
         <module>core</module>
-        <module>priority</module>
         <module>cdk</module>
     </modules>
 
@@ -45,8 +44,8 @@
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-library</artifactId>
-                <version>1.1</version>
+                <artifactId>hamcrest-all</artifactId>
+                <version>1.3</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
