Change Maven group id.

--- a/cdk/pom.xml
+++ b/cdk/pom.xml
@@ -22,7 +22,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>centres</artifactId>
-    <groupId>uk.ac.ebi.centres</groupId>
+    <groupId>com.simolecule</groupId>
     <version>0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
