--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.simolecule</groupId>
+        <groupId>com.simolecule.centres</groupId>
         <artifactId>centres</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
