--- a/opsin/pom.xml
+++ b/opsin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>centres</artifactId>
     <groupId>com.simolecule.centres</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
