--- a/cdk/pom.xml
+++ b/cdk/pom.xml
@@ -30,7 +30,7 @@
     <artifactId>centres-cdk</artifactId>
 
     <properties>
-        <cdk.version>2.2-SNAPSHOT</cdk.version>
+        <cdk.version>2.3</cdk.version>
     </properties>
 
     <dependencies>
