--- a/cdk/pom.xml
+++ b/cdk/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>30.0-jre</version>
         </dependency>
         <dependency>
             <groupId>org.openscience.cdk</groupId>
