--- a/cdk/pom.xml
+++ b/cdk/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <artifactId>centres</artifactId>
         <groupId>com.simolecule.centres</groupId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>centres-cdk</artifactId>
 
     <properties>
-        <cdk.version>2.8</cdk.version>
+        <cdk.version>2.9</cdk.version>
     </properties>
 
     <dependencies>
